--- a/src/pages/landing/landing.html
+++ b/src/pages/landing/landing.html
@@ -1,18 +1,19 @@
-<!--
-  Generated template for the LandingPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
     <ion-title>Landing</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content padding>
+    <button ion-button block clear (click)="goToLogin()">
+      Login
+    </button>
 
+    <button ion-button block clear (click)="goToSignup()">
+      Signup
+    </button>
+
+    <button ion-button block clear (click)="goToResetPassword()">
+      Forgot Password?
+    </button>
 </ion-content>
